--- a/style.css
+++ b/style.css
@@ -1,45 +1,113 @@
 nav {
-   background-color: rgb(201, 199, 199);
-    text-align: center;
-    justify-content: space-between;
-    flex-direction: column;
-    border: solid 6px;
-    
+background-color: rgb(201, 199, 199);
+text-align: center;
+justify-content: space-between;
+flex-direction: column;
+border: solid 6px; 
 }
 
 header {
-
-    text-align: center;
-    padding: 10%;
+text-align: center;
+padding: 10%;
 background-image: url(layout-01-assets/img11.jpg);
+background-repeat: no-repeat;
 color: white;
 font-family: 'Courier New', Courier, monospace;
 font-size: larger;
 }
 
 .headline1{
+display: grid;
+margin-top: 5%;
+margin-right: 68.6%;
+
+}
+
+
+.Headline2{
+display: grid;
+margin-top: -21.1%;
+margin-left: 35%;
+margin-right: 35%;
+
+}
+
+
+.Headline3{
+display: grid;
+margin-top: -21%;
+margin-left: 70%;
+margin-right: 0%;
+
+}
+
+ .TCLS{
+display: grid;
+text-align: center;
+margin-right: 55%;
+padding: 10%;
+ }
+
+    
+ .TCRS{
+display: grid; 
+margin-top: -52.3%;
+text-align: center;
+margin-left: 55%;
+padding: 10%;
+ }
+
+.OurServices {
+display: flex;
+
+padding: 190px;
+background-image: url(layout-01-assets/img13.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+
+ }
+
+ .OURSERVICESH2 {
+    display: flex;
+text-align: center;
+margin-left: 44%;
+font-size: xxx-large;
+margin-top: -9%;
+color: white;
+ }
+
+ .servicesP {
 display: flex;
 text-align: center;
-margin-bottom: 10%;
+margin-left: -40%;
+margin-right: 20%;
+color: white;
+font-size: larger;
+ }
 
 
-}
+ .COLUMNONE{
+display: grid;
+margin-top: 5%;
+margin-right: 85%;
+font-size: larger;
+ }
+
+ .COLUMNTWO{
+display: grid;
+margin-left: 29%;
+margin-top: -26.5%;
+margin-right: 80%;
+font-size: larger;
+ }
+
+ .COLUMNTHREE{
+display:grid;
+margin-left: 57.6%;
+margin-top: -27.2%;
+margin-right: 80%;
+font-size: larger;
 
 
-section{
-display: flex;
-align
-    
-}
-
-ul li a  {
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    flex-direction: column;
-   
-    
-}
-
-
-
+ }
